--- a/davidegan.html
+++ b/davidegan.html
@@ -19,7 +19,7 @@ blockquote, iframe, #sloppy { text-align: center; margin-left: 200px; }
 <p>
 SgtPepperArc360 (<i>real name: David John Egan IV, birth: 2002/02/15, age: 21</i>) is a person who is literally obsessed with technology back in 2008 when it was occurred. This person comes from one of my YouTube channels that I certainly own; like how my 2018 channel got terminated for violating as spam and deceptive practices and created it today. After I viewed my comments, I decided to check out of his channel. There was a channel with the last amount of subscribers, but his style was created was casual, vlogging, streamable and most importantly - artistic creation. Today from now on, he is now a furry porn lover, becomes a pedophile and hypocritical. Here's why I'm going to do this. I told Jack Seymour for what happened earlier. David Egan is striking one of my videos for some reasons why I was bad and making fun of him is not for fun, but it could ruin the person's reputation. The reputation has two sides where you have a good and a bad side. The good side means if you are a successful person completing in some ways like you completed the whole school but you got pinned as a important student in the world where everybody likes you. The bad side means if you are a unsuccessful person, being rude to others and ruining someone's career would be improbable and this thing will sometimes make you infamous. Do you know why he was doing that? In the start of the video, I see his video and saying that David Egan is not a good person, but bad person, completely making it to look like so autistic and rarely turning into some sort of person type of "racism".</p>
 <p>After 2022, a few months later, I sent the message to knownshell on David Khoa's server leaving that David Khoa abandoned his Discord account for privacy reasons... or he was phone locked at all the time. This thing I said "I swear if you don't leave this server, then I will delete SgtPepperArc360's server instead".</p>
-<p>After knownshell joins it, he sent two messages above me:/p>
+<p>After knownshell joins it, he sent two messages above me:</p>
 <p>"Yes, delete it."</p>
 <p>"Bro, I can't fucking chat in your cheap copy of David Egan server."</p>
 <p>After I deleted this illegal server, I revealed my truth:</p>
@@ -51,7 +51,7 @@ SgtPepperArc360 (<i>real name: David John Egan IV, birth: 2002/02/15, age: 21</i
 <br>
 <br>
 <h2>Part 2: SgtPepperArc360's terrorism of making my own spam and misleading comments.</h2>
-<p>Since David Egan enabled "Increased strictness", my commenets won't appear instantly wherever YouTube approves these comments and are held on review. For my other channel, I created a very sickening and unaccompanied channel that has some boring content and comments.</p>
+<p>Since David Egan enabled "Increased strictness", my comments won't appear instantly wherever YouTube approves these comments and are held on review. For my other channel, I created a very sickening and unaccompanied channel that has some boring content and comments.</p>
 <p>I spammed on his content without scummy things, but not something told.</p>
 <p>Oh noio, it looks like a system crash! - <i>reference from BFDI</i>.</p>
 <br>
@@ -60,7 +60,7 @@ SgtPepperArc360 (<i>real name: David John Egan IV, birth: 2002/02/15, age: 21</i
 <p>Yes, I am craxyyyy.</p>
 <p>After I made spam comments for a few hours later, he replied to me.</p>
 <p style="color:royalblue;">@please <b>STOP SPAMMING</b></p>
-<p>David Egan doesn't seem like if people are spamming on every video and say disgusting and nonsensical texts, it would be held and some cases, you may be blocked from the channel where you are from this account. <b>Tell me, why do you need to prohibit spamming? Sometimes the spam would not be the same, but it could also strike to people's channels whether they like to know how YouTube prevents people spamming their comments and allegedly watch out.</b></p>
+<p>David Egan doesn't seem like if people are spamming on every video and say disgusting and nonsensical texts, it would be held and some cases, you may be blocked from the channel where you are from this account. <b>Tell me, why do you need to prohibit spamming? Sometimes the spam would not be the same, but it could also strike to people's channels whether they like to know how YouTube prevents people spamming their comments and allegedly watching out.</b></p>
 <br>
 <p>After I uploaded the video that is being deleted, he said: <i>"I said no. Please take this video down and find something constructive to do with your time"</i>.</p>
 <br>
@@ -134,7 +134,7 @@ If you do, <b>you WILL be reported!!!</b><br>
 <br>
 <h2>Part 6: Something's going on here...</h2>
 <br>
-<p>As I mention, David Egan was a really bad person in every year like he keeps ruining the year of above. After I shared his community post saying that subscribers were not told to be up, but also down and then I said to him "Everyone calls David Egan". Before I shared the post, a few days later I got a post saying: "HOW DARE YOU", you know right? You are nothing but is to kick me out of my existence and make me cry because I attacked you for no reason. I have to get you rid of it, because you made me that I revived your server being so illegal and then you are mad at me, huh? Think it again and I'm sure you might get your entire channel terminated for harassing me with one reason.</p>
+<p>As I mention, David Egan was a really bad person in every year like he keeps ruining the year of above. After I shared his community post saying that subscribers were not told to be up, but also down and then I said to him "Everyone calls David Eggman". Before I shared the post, a few days later I got a post saying: "HOW DARE YOU", you know right? You are nothing but is to kick me out of my existence and make me cry because I attacked you for no reason. I have to get you rid of it, because you made me that I revived your server being so illegal and then you are mad at me, huh? Think it again and I'm sure you might get your entire channel terminated for harassing me with one reason.</p>
 <p>David: Well I think you guys should stop projecting the blame onto me.</p>
 <p>Daniel: I THINK YOU SHOULD START PROJECTING YOUR VOICE! *everyone to my closest friends beating David Egan*</p>
 <p>You know why I can say about you? Your friend "David Egan" has been attacking me for the whole time and wasting his lifetime by doing anything good like that I don't care. He was spitting the facts for the whole time too and I cannot last even longer on this. I don't care about this person, but if anything goes something unusual, you can never trust this person away and say to him "You know what? Apology denied for you, David Egan for attacking the furthest friend of mine!" and I mean why he was a severe caused person to look like this and his behavior must be stopped to be continued on. I wish that I can screech his ears and getting blown out for couple seconds.</p>
@@ -168,7 +168,7 @@ What the HELL is wrong with you? Go remove your fucking brain you IMMENSE shitga
 <img src="amogus.png" alt="So you don't like a very ridiculous game made by Innersloth? Too late." width="200px">
 <img src="copyrighted.png" alt="Screw you, that copyrighted video is actually you, but I wanna take it!" width="200px">
 <img src="fitness.png" alt="He's hacked. I don't need him." width="200px">
-<img src="fuckfat.png" alt="YOU CALLED FAT? I WILL REPORT HIM!!! I MEAN IT!!!!!!!!!!" width="200px">
+<img src="fuckfat.png" alt="YOU CALLED FAT? I WILL REPORT HIM!!! I MEAN IT!!!" width="200px">
 <img src="goodjobdavid.png" alt="You like disliking some videos and giving them a nerve, huh? You can lie this person telling you something informational and concisional." width="200px">
 <img src="mrdavid.png" alt="I am telling him to go on some videos, but he does not care." width="200px">
 <img src="oof.png" alt="You can tell YouTube and say that I stole from something. You can't be serious." width="200px">
@@ -186,9 +186,9 @@ What the HELL is wrong with you? Go remove your fucking brain you IMMENSE shitga
 <img src="stalking.png" alt="Today from now on, you don't need to stalk me. Ignore me all you want and I will ignore you for once." width="200px">
 <img src="whtf.png" alt="Psychopathic reasons, yes? Don't listen to David Egan." width="200px">
 <img src="youbro.png" alt="People for who aren't too childish..." width="200px">
-<img src="youwanttokillme.png" alt="Then I will call the police for free of charge and you can tell me that I'm in suspect of having me killed by David Egan, please send nukes to him thanks." width="200px">
-<p>David Egan, are you serious right now? Would you like to be in suspect of police to find where you are and give you the reason why are you doing so many illegal things where you can talk about? I feel this is mobile data... and everyone in the world banned me. I can't tolerate this with you anymore. Goodbye.</p>
+<img src="youwanttokillme.png" alt="Then I will call the police for free of charge and you can tell me that I'm in trouble of having me killed by David Egan, please send nukes to him thanks." width="200px">
+<p>David Egan, are you serious right now? Would you like to be a suspect in police to find where you are and give you the reason why are you doing so many illegal things where you can talk about? I feel this is mobile data... and everyone in the world banned me because of that. I can't tolerate this with you anymore. Goodbye.</p>
 <hr>
-<p>This video will not be released. That's how I want, it's my life. I won't be making out of him or else the things would go down for me.</p>
+<p>This video will not be released. That's how I want, it's my life. I won't be making out of him or else things would go down for me.</p>
 </body>
 </html>
