--- a/index.html
+++ b/index.html
@@ -160,7 +160,10 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <h2>What's your oldest phone and computer?</h2>
 <p>Samsung Galaxy S2 is the first device that I used in 2012. I used to play Fruit Ninja where the game was two years now and my oldest computer are two computers were running Windows XP operating system. I had so much memories from using this.</p>
 <h2>What will you be doing in the future?</h2>
+<div style="display: none;">
 <p>I will be quitting the Internet in the start of New Year's Eve 2024. I have been as a teenager for one decade. I like technology. music and arts, I don't want to exist, never will. Why people would do that nowadays after I interacted with them and telling me to stop? Even they expose me for doing something wrong? I did nothing wrong. I am a person, but who are you? A coward? You shouldn't be here in the internet. Some of bad news were occurred was my ISP blocked port forwarding from someone's router, updated Google Colab rules, updated YouTube system, Google will begin deleting all the accounts before December 1st and much much more bad stuff going on. I wish if I host my own home server and go on it every day without going to external internet sites and most importantly - breaking from the Internet for 10 years if something changes and will make my day happy even better if everything has been wiped and resolved. I am dead.<br><h2>What will happen to your stuff?</h2><br>Nothing will happen, but sometimes if the drama goes over on one of my YouTube channels, I will not care about them until my channel gets terminated or whatever else you can say. I will delete a few YouTube channels that I don't need them and I will also delete Google accounts that are no longer needed anymore for most cases. I will abandon them with some silly old angry messages out of someone that I have proved extremely wrong, unfathomable, delusional and uncomfortable.</p>
+</div>
+<p>COMING SOON!..</p>
 <br>
 <h1>Other links: </h1>
 <p>There are no other links to visit. The only thing is the website that has some limited features without having anything in there. If you are the hoarder, I want you to become a programmer and buy a home server with a new ISP. This thing would not last amazing.</p>
@@ -173,6 +176,7 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <p><a href="/latvia_vacation">Latvia journey</a></p>
 <p><a href="swearing.html">Swearing</a></p>
 <p><a href="training_voice.html">FakeYou voice training</a></p>
+<p><a href="gallery.html">Gallery (MY FAVS.)</a></p>
 <p><a href="/exploit">Exploits (OLD)</a></p>
 <p><a href="ytconverter.html">YouTube Thumbnail Converter</a></p>
 <p><a href="gg.html">Game Genie Randomizer</a></p>
