--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@ a {cursor: url("/poi.png"), pointer;}
 </head>
 <body>
 <div id="main" class="dialog">
-<img src="/error.png" class="dialogImage" width="50px">
+<img src="/shutdown/error.png" class="dialogImage" width="50px">
 <h1>404 Not Found</h1>
 <p>The page that you are looking is not found.</p>
 <br>
@@ -27,7 +27,7 @@ a {cursor: url("/poi.png"), pointer;}
 <br>
 <a href="/">Back to Home</a>
 <br><br>
-<p class="credits">All rights reserved. HyperWORLD Server Ltd. 2019-2023.</p>
+<p class="credits">All rights reserved. HyperWORLD Server Ltd. 2019-2024.</p>
 </div>
 <script>
 // ONUTEWORLD.TK LTD 2023/05/20
