--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <br>
 <h1>Other links:</h1>
 <p><a href="/transcripts" class="rainbowTest">Transcripts</a></p>
-<p>It's good and better than ever before! Why don't you start messing around first?</p>
+<p>It's good and better than ever before! Read it carefully!</p>
 <p><a href="/pmdm">Generators/Tools</a></p>
 <p>Want to explore some tools where I have made? Try visiting PMDM for really cool stuff!</p>
 </div>
