--- a/index.html
+++ b/index.html
@@ -210,27 +210,31 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <br><br>
 <p>If you want to host the servers offline, here's some links which you need. Modifying is required (unless your computer is different)! <a href="https://www.mediafire.com/folder/2vssve1lnr5yh/BonziWORLD+Servers">Folder 1</a> and <a href="https://www.mediafire.com/folder/nujzrpl51zumq/2019_servers">Folder 2</a>.</p>
 <br>
-<p><a href="/swearing.html">Swearing</a></p>
-<p><a href="/training_voice.html">FakeYou voice training test</a></p>
-<p><a href="/gamegenie">Game Genie generator for NES</a></p>
-<p><a href="/converter3">Jabbifier</a> <font color="red">(NEW)</font></p>
-<p><a href="/converter2">YouTube Thumbnail Generator</a></p>
-<p><a href="/converter">Encrypt Text</a></p>
-<p><a href="/burgeria">Papa's Burgeria hacks</a></p>
+<p><a href="phonemes.html">FakeYou phonemes</a></p>
+<p><a href="davidegan.html">David Egan Rant</a></p>
+<p><a href="/latvia_vacation">Latvia journey</a></p>
+<p><a href="swearing.html">Swearing</a></p>
+<p><a href="training_voice.html">FakeYou voice training test</a></p>
+<p><a href="gallery.html">Gallery (MY FAVS.)</a></p>
+<p><a href="/exploit">Exploits</a></p>
+<p><a href="converter3.html">Jabbifier</a> <font color="red">(NEW)</font></p>
+<p><a href="ytconverter.html">YouTube Thumbnail Converter</a></p>
+<p><a href="gg.html">Game Genie Randomizer for NES</a></p>
 <br>
 <h1>Other links:</h1>
-<p><a href="/transcripts" class="rainbowTest">Transcripts</a> <font color="red">(NEW)</font></p>
-<p><a href="http://jabba.bonziworld.org:3005">Upload file</a></p>
-<p><a href="/archived">List of uploaded files</a></p>
-<p><a href="/isos" class="rainbowTest">My archive</a></p>
-<p><a href="/shutdown">HTTP Errors</a></p>
+<p><a href="/transcripts" class="rainbowTest">Transcripts</a></p>
+<p>It's good and better than ever before! Read it carefully!</p>
+<p><a href="/pmdm">Generators/Tools</a></p>
+<p>Want to explore some tools where I have made? Try visiting PMDM for really cool stuff!</p>
 </div>
 
 <div id="About" class="tabcontent">
 <br><br>
 <img src="logo.svg" alt="HyperWorld - The Special Final Release" width="500px" id="logo">
-<p>New layout made by "THE OWNER OF HYPERWORLD".</p>
+<p>New layout made by "THE OWNER OF HYPERWORLD". You are now on the GitHub version.</p>
 <p>All rights reserved. HyperWORLD Server Ltd. 2019-<span id="oYear"></span>.</p>
+<br>
+<p>Please note, this page was entirely hosted on Fastly's GitHub pages. There are no servers inside for this page. The actual page can be found on official HyperWORLD page which is now without GitHub.</p>
 <br>
 <h1>IF THERE'S AN INSIGNIFICANT IMPROVEMENT FOR THIS SITE, PLEASE CONTACT US <a href="mailto:danieliuspaulavicius@gmail.com">HERE</a>.</h1>
 <p>Please do not use this business e-mail. Just remember you don't use people's e-mails as long as you have a point.</p>
@@ -257,10 +261,6 @@ function openPage(pageName,elmnt,color) {
 document.getElementById("defaultOpen").click();
 
 document.getElementById("oYear").innerHTML = new Date().getFullYear();
-document.addEventListener("DOMContentLoaded", function(){
-if(window.location.hostname === "jabba.bonziworld.org"){document.getElementById('warning').style.display = "none";}
- if(window.location.hostname === "78.63.40.199"){var kka = ["http://jabba.bonziworld.org"];window.location.replace(kka[Math.floor(Math.random()*kka.length)]);document.getElementById('warning').style.display = "block";document.getElementById('main').style.display = "none";}
-});
 
 window.addEventListener("load", () => {
   if ("serviceWorker" in navigator) {
