--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@ hr { color: black; background: black; }
 <h3>A legitimate "fanbase" site from 2019 to 2024.</h3>
 <br>
 <div id="announcement1" style="display: block;">
-<h2 style="color:yellow;">The website new layout has been updated! What do you guys expect than the old one? <span style="color:white;"> - HyperWORLD Server Team</span></h2>
+<h2 style="color:yellow;">HyperWORLD is now the part of Warsaw community! <span style="color:white;"> - HyperWORLD Server Team</span></h2>
+<p>WHAT ARE YOU WAITING FOR? JOIN NOW!</p>
+<h1><a href="https://discord.gg/vUYjkCdDnU">Warsaw</a></h1>
 </div>
 <p>Due to kiddies still involving on chat sites, we cannot bring this site back, because it's too useless. </p>
 <br>
