--- a/index.html
+++ b/index.html
@@ -160,8 +160,6 @@ hr { color: black; background: black; }
 <p>WHAT ARE YOU WAITING FOR? JOIN NOW!</p>
 <h1><a href="https://discord.gg/vUYjkCdDnU">Warsaw</a></h1>
 </div>
-<p>Due to kiddies still involving on chat sites, we cannot bring this site back, because it's too useless. </p>
-<br>
 <p>Hello, there's nothing to do with this site... and the bio! Please click these tabs to continue!</p>
 <br>
 <h2>Do you like watching BFDI?</h2>
@@ -219,11 +217,12 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <p><a href="training_voice.html">FakeYou voice training test</a></p>
 <p><a href="gallery.html">Gallery (MY FAVS.)</a></p>
 <p><a href="/exploit">Exploits</a></p>
-<p><a href="converter3.html">Jabbifier</a> <font color="red">(NEW)</font></p>
+<p><a href="converter3.html">Jabbifier</a></p>
 <p><a href="ytconverter.html">YouTube Thumbnail Converter</a></p>
 <p><a href="gg.html">Game Genie Randomizer for NES</a></p>
 <br>
 <h1>Other links:</h1>
+<p><a href="discordbots.html" class="rainbowTest">Source code for Discord bots</a> <font color="red">(NEW)</font></p>
 <p><a href="/transcripts" class="rainbowTest">Transcripts</a></p>
 <p>It's good and better than ever before! Read it carefully!</p>
 <p><a href="/pmdm">Generators/Tools</a></p>
