--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@ hr { color: black; background: black; }
 </div>
 
 <div id="Story" class="tabcontent">
+<p>In July 29th, 2024, when I was backing up my data on my old laptop to USB flash drive, I found a few copies of HTML named "FireSchoolDownload" in September 2019 which is not labelled as "FireGamesDownload" because that name does not exist. You always know that is a FTP-based site.<br>
+If you want to explore the nostalgia trip of my 2018 website, <a href="/fireschooldownload/Webpage.html">click here below</a>.</p>
 <br><br>
 <h2>Why HyperWorld was created?</h2>
-<p>Oof, that was a long story. Back on early 2019, I started my first FTP server running on ES File Explorer in my middle school when I was 13 (as you have heard this app is being malicious by Play Protect). Nevertheless, this server is only temporary and it's running on my older phone "Sony Xperia M4 Aqua", but it didn't work very well. I changed a few hotspot names where the students can connect to my hotspot and search something nasty which they did not want to visit my FTP server acting as a web server, because I'm too dumb at hosting sites. It was called "FireGamesDownload" by the way when I didn't learn the right skills of HTML. But in the bright side in mid-2018, I started learning HTML for a little bit, but as a 12-year old kid, my coding skills were too terrible for me.<br>
+<p>Oof, that was a long story. Back on early 2019, I started my first FTP server running on ES File Explorer in my middle school when I was 13 (as you have heard this app is being malicious by Play Protect). Nevertheless, this server is only temporary and it's running on my older phone "Sony Xperia M4 Aqua", but it didn't work very well. I changed a few hotspot names where the students can connect to my hotspot and search something nasty which they did not want to visit my FTP server acting as a web server, because I'm too dumb at hosting sites. It was called "FireSchoolDownload" by the way when I didn't learn the right skills of HTML. But in the bright side in mid-2018, I started learning HTML for a little bit, but as a 12-year old kid, my coding skills were too terrible for me.<br>
 Back on Late July 2019, I've been trying to host the server without any port forwards or tricks, but I also went into his Discord server to tell a person who is responsible of BWR ("BonziWORLD Revived") bringing the site back to life and two sites were the superiors; just like how Foodz and Seamus did it. I told him how to make a BonziWORLD server of myself without having to access the public site ever again. For most conflicts that Seamus did actually forget what to do; "port forwarding". The sunset is coming, time to sleep. That's a issue where I'm getting that I'm not forwarding to everyone. A few minutes later, I finally made this server up for everyone and now I can host anything whatever I want to.<br>
 In the end of November 2019, I made my first community called "OnuteWORLD" and the site's color is actually teal for top and bottom cards. There's wasn't an domain that has been linked to something else, but it has never implemented.
 <br>
@@ -222,6 +224,7 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <p><a href="gg.html">Game Genie Randomizer for NES</a></p>
 <br>
 <h1>Other links:</h1>
+<p><a href="/rawpixels">RAW Pixels</a></p>
 <p><a href="discordbots.html" class="rainbowTest">Source code for Discord bots</a> <font color="red">(NEW)</font></p>
 <p><a href="/transcripts" class="rainbowTest">Transcripts</a></p>
 <p>It's good and better than ever before! Read it carefully!</p>
