--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@ a {cursor: url("/poi.png"), pointer;}
 </head>
 <body>
 <div id="main" class="dialog">
-<img src="/shutdown/error.png" class="dialogImage" width="50px">
+<img src="/error.png" class="dialogImage" width="50px">
 <h1>404 Not Found</h1>
 <p>The page that you are looking is not found.</p>
 <br>
