--- a/rawpixels/index.html
+++ b/rawpixels/index.html
@@ -16,6 +16,7 @@
 <div id="topBar">
 <div id="logo"></div><h1>RAW pixels viewer</h1>
 This application allows you analyze raw image data, you can display memory dumps of frame buffers, video buffers and uncompressed video files. Play with image parameters below to explore world of colors.
+<br>We won't process any data to the servers since all your files are stored on your computer and it is processed locally.
 </div>
 
 <div id="zoomDiv">
