--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@ Attention to TPOT 12 leakers, if you see the screen including Golf Ball and Cand
 <h2>What's your Discord tag?</h2>
 <p style="color:red;"><del>@thisuserdoesnotexist</del></p>
 <p>DON'T ADD IT! ABANDONED ACCOUNT BEFORE APRIL 14TH INCIDENT. At least you can send a friend request on my second account:</p>
-<p style="color:royalblue;">@itzultrascout</p>
+<p style="color:royalblue;"><del>@itzultrascout</del></p>
+<p>Account deleted due to police officer's incident. I don't know how many days will impact until anonymization.</p>
 <h2>What's your Discord server?</h2>
 <p><a href="https://discord.gg/DpBBJkBuzQ">Discord server</a></p>
 <h2>Have you been banned from other websites?</h2>
