--- a/index.html
+++ b/index.html
@@ -156,8 +156,7 @@ hr { color: black; background: black; }
 <h3>A legitimate "fanbase" site from 2019 to 2024.</h3>
 <br>
 <div id="announcement1" style="display: block;">
-<h2 style="color:yellow;">HyperWORLD is now the part of Warsaw community! <span style="color:white;"> - HyperWORLD Server Team</span></h2>
-<p>WHAT ARE YOU WAITING FOR? JOIN NOW!</p>
+<h2 style="color:yellow;">You have been redirected to HTTPS site because we cannot afford to host them at this time. And if you want to access one of the archives, I am really busy for everything.</span></h2>
 <h1><a href="https://discord.gg/vUYjkCdDnU">Warsaw</a></h1>
 </div>
 <p>Hello, there's nothing to do with this site... and the bio! Please click these tabs to continue!</p>
