--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@ After I made a clone of "BonziWORLD Revived", I renamed to "OnuteWORLD Revived" 
 <p><a href="training_voice.html">FakeYou voice training test</a></p>
 <p><a href="gallery.html">Gallery (MY FAVS.)</a></p>
 <p><a href="/exploit">Exploits</a></p>
+<p><a href="/encryption">Encrypt Text</a></p>
 <p><a href="converter3.html">Jabbifier</a></p>
 <p><a href="ytconverter.html">YouTube Thumbnail Converter</a></p>
 <p><a href="gg.html">Game Genie Randomizer for NES</a></p>
