--- a/index.html
+++ b/index.html
@@ -156,11 +156,12 @@ hr { color: black; background: black; }
 <h3>A legitimate "fanbase" site from 2019 to 2024.</h3>
 <br>
 <div id="announcement1" style="display: block;">
-<h2 style="color:yellow;">You have been redirected to HTTPS site because we cannot afford to host them at this time. And if you want to access one of the archives, I am really busy for everything.</span></h2>
+<h2 style="color:yellow;">This website is in HTTPS protocol and we cannot afford to host them at this time. Unfortunately, but one of the archives that don't exist on GitHub and they are completely private from another place.</span></h2>
 <h1><a href="https://discord.gg/vUYjkCdDnU">Warsaw</a></h1>
 </div>
 <p>Hello, there's nothing to do with this site... and the bio! Please click these tabs to continue!</p>
 <br>
+<h1>Most frequently asked questions</h1>
 <h2>Do you like watching BFDI?</h2>
 <p>Why not? I watch many of them, every single day! It's been 9 years after I stumbled on logo editors watching their own shows!<br>
 Attention to TPOT 12 leakers, if you see the screen including Golf Ball and Candle, you should not put your mobile phone or a camera to record it. If you catch someone who is recording, there is a 100% chance to be forcibly ejected from the theatre. Next, when Cary and his crew were upset, he posted a video about leakers getting cooked into plates and eating them for leaking the episodes. It is no matter why they are leaking the episodes from the meetup after you got a ticket, choose a seat and watch what it really experiences you. In the future, I hope there will be no leakers around if Cary makes one of the issues due to leakers leaking the episodes again, they'll tell the people who they are.</p>
@@ -168,9 +169,9 @@ Attention to TPOT 12 leakers, if you see the screen including Golf Ball and Cand
 <p>Indigo or I'd like to say orange, which is my best favorite color.</p>
 <h2>What's your Discord tag?</h2>
 <p style="color:red;"><del>@thisuserdoesnotexist</del></p>
-<p>DON'T ADD IT! ABANDONED ACCOUNT BEFORE APRIL 14TH INCIDENT. At least you can send a friend request on my second account:</p>
+<p>Not involved on Discord, sorry. And there is the account where I deleted after this incident happened.</p>
 <p style="color:royalblue;"><del>@itzultrascout</del></p>
-<p>Account deleted due to police officer's incident. I don't know how many days will impact until anonymization.</p>
+<p>THIS ACCOUNT IS PERMANENTLY DELETED DUE TO INCIDENT.</p>
 <h2>What's your Discord server?</h2>
 <p><a href="https://discord.gg/DpBBJkBuzQ">Discord server</a></p>
 <h2>Have you been banned from other websites?</h2>
@@ -190,7 +191,7 @@ Attention to TPOT 12 leakers, if you see the screen including Golf Ball and Cand
 <p>Samsung Galaxy S2 is the first device that I used in 2012. I used to play Fruit Ninja where the game was two years now and my oldest computer are two computers were running Windows XP operating system. I had so much memories from using this.<br>
 On late July 2024, I was thinking about my old laptop's operating system being stuck on Windows 10 for six years and it is extremely slow due to excessive amount of power outages but meanwhile in this operating system, opening the control panel crashes Windows Explorer, right-clicking on microphone shortly hangs, games don't work on modern 2010 hardware, Windows Error Reporting runs every single hour and bloated Windows 10 built-in applications running every day such as Microsoft Compatibility Telemetry, Device Census, sedsvc, Search and Runtime Broker. I have no options but I just turned off my WiFi connectivity to prevent any URL connection exposures. Once I get this installed, I will install Windows 7 Home Premium x86 pre-activated operating system, wipe the current drive, install it and it will be so much faster than this sucker from 2015. And what about drivers? I got three discs on my closet, the first disc is driver and utilities, second is manual and third is CyberLink applications.</p>
 <h2>What are you doing in the future?</h2>
-<p>Talking to people on Warsaw, watching BFDI/TPOT on my phone and playing games. Why don't you join his Discord server? You will meet with Fune and Ziggy for the first time, but don't piss them off by respectfully talking them. And his legend "SIAN" was only a temporary user on this server and we can't tell what he will utmost return to Warsaw just because he was very limited or something else to go.</p>
+<p>Archiving myTeardrop versions before they came out and counting until I will take my entire site into nothingness, but as occasion.</p>
 <iframe src="https://ezstat.ru/2RqKe7" width="1" height="1"></iframe>
 </div>
 
